# imageio-avif

./: README.md  gradle.properties  settings.gradle.kts
jdk/: build.gradle.kts
jdk/src/main/java/com/github/ustc_zzzz/imageio/avif/: AVIFException.java  AVIFImageMetadata.java  AVIFImageMetadataFormat.java  AVIFImageReader.java  AVIFImageReaderSpi.java  AVIFStreamMetadata.java  AVIFStreamMetadataFormat.java  Native.java
jdk/src/test/java/com/github/ustc_zzzz/imageio/avif/: TestAVIFImageReader.java
jdk/src/test/resources/: horse_in_motion_yuv420_8bpc.avif
native/: CMakeLists.txt  build.gradle.kts
native/patches/: libavif.cmake.patch
native/src/: avif_imageio_jni.c
native/toolchains/: linux-amd64.cmake  macos-amd64.cmake  macos-arm64.cmake  windows-amd64.cmake  windows-arm64.cmake
